--- a/index.qmd
+++ b/index.qmd
@@ -12,7 +12,7 @@ Deze Visietool helpt om een visie te ontwikkelen op (digitaal) toetsen binnen ee
 
 ## Toekomstperspectief op (digitaal) toetsen en beoordelen
 
-De werkgroep Toetsen van het Versnellings plan ontwikkelde in 2022 het toekomstperspectief voor toetsen en beoordelen in 2027. Het is gebaseerd op een analyse van trends rond toetsing in het hoger onderwijs. Onder leiding van bureau Turner en samen met SURF en een kleine 50 experts uit mbo, hbo en wo is vervolgens het perspectief ingekleurd.
+De [werkgroep Toetsen](https://www.versnellingsplan.nl/werkgroep-toetsen-op-afstand/) van het [Versnellings plan](https://www.versnellingsplan.nl) ontwikkelde in 2022 het [toekomstperspectief voor toetsen en beoordelen in 2027](https://www.versnellingsplan.nl/Kennisbank/toekomstperspectief-op-digitaal-toetsen-en-beoordelen/). Het is gebaseerd op een analyse van trends rond toetsing in het hoger onderwijs. Onder leiding van bureau Turner en samen met SURF en een kleine 50 experts uit mbo, hbo en wo is vervolgens het perspectief ingekleurd.
 
 ## Vijf dimensies
 
@@ -30,10 +30,4 @@ Een uitgebreide toelichting op de dimensies is terug te lezen in het Toekomstper
 De Visietool helpt om per dimensie het gesprek aan te gaan over de invulling ervan. Iedere dimensie is opgesplitst in twee componenten (bijvoorbeeld voor de eerste dimensie: een component Formatief en een component Summatief). Vervolgens bevat elke component drie schaalpunten. Elk schaalpunt bevat een stelling met een inhoudelijke concretisering en een (mogelijke) verantwoording.
 Gebruikers van de Visietool kiezen voor elke component het schaalpunt van de stelling die zij het beste vinden passen (let op: het hoeft niet perfect te passen, het gaat erom het gesprek op gang te brengen) bij hun opleiding en de ambities die zij hiervoor hebben. Het invulveld in de tool biedt de mogelijkheid een verantwoording bij de keuze op te  schrijven.
 
-N.B. het is niet zo dat schaalpunt 3 te allen tijde ‘de beste keuze’ zou zijn. Welk schaalpunt de beste keuze is, kan voor iedere opleiding verschillend zijn. 
-
-## Gebruik
-
-Dit instrument is het beste in te zetten als gesprekstool met een multidisciplinair team (denk aan: onderwijsadviseur, toetsdeskundige, opleidingsdirecteur, examencommissie, opleidingscommissie, docent, etc.) van 5-7 personen.
-
-Wij raden gebruikers aan om eerst de Visietool individueel te doorlopen en om bij elke component een eigen verantwoording te formuleren voor de gekozen stelling. Vervolgens gaan de betrokkenen met elkaar in gesprek over de gemaakte keuzes en de verantwoordingen hiervan. Dan komen zij tot een besluit en leggen dit vast door gezamenlijk de visietool opnieuw in te vullen. De gekozen stellingen en ingevulde verantwoordingen in de definitief ingevulde visietool vormen vervolgens  input voor het schrijven van de officiële visie van de opleiding.
+N.B. het is niet zo dat schaalpunt 3 te allen tijde ‘de beste keuze’ zou zijn. Welk schaalpunt de beste keuze is, kan voor iedere opleiding verschillend zijn.
